--- a/Backend/package.json
+++ b/Backend/package.json
@@ -7,6 +7,7 @@
     "server": "nodemon index.js",
     "test": "cross-env TESTING_DB=testing jest --watch --verbose"
   },
+  "license": "MIT",
   "dependencies": {
     "aws-sdk": "^2.412.0",
     "cors": "^2.8.5",
