--- a/package.json
+++ b/package.json
@@ -4,5 +4,5 @@
   "main": "index.js",
   "repository": "https://github.com/Lambda-School-Labs/labspt2-wedding-website.git",
   "author": "Chris Roth <c.roth.lambda@gmail.com>",
-  "license": "MIT",
+  "license": "MIT"
 }
