--- a/Backend/package.json
+++ b/Backend/package.json
@@ -7,6 +7,10 @@
     "server": "nodemon index.js",
     "test": "cross-env TESTING_DB=testing jest --watch --verbose"
   },
+  "repository":{
+    "type": "git",
+    "url": "https://joinouridos.herokuapp.com/"
+  },
   "license": "MIT",
   "dependencies": {
     "aws-sdk": "^2.412.0",
