--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,6 +1,9 @@
 {
   "name": "JoinOurIDos-Back-end",
   "version": "1.0.0",
+  "engines":{
+    "node":"11.9.0"
+  },
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
