--- a/Frontend/client/package.json
+++ b/Frontend/client/package.json
@@ -8,6 +8,7 @@
     "react-dom": "^16.8.3",
     "react-redux": "^6.0.1",
     "react-responsive-carousel": "^3.1.47",
+    "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.5",
     "redux": "^4.0.1",
