--- a/Backend/package.json
+++ b/Backend/package.json
@@ -26,6 +26,8 @@
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "multer-s3": "^2.9.0",
+    "passport": "^0.4.0",
+    "passport-google-oauth": "^1.0.0",
     "pg": "^7.8.1",
     "sqlite3": "^4.0.6"
   },
