--- a/Frontend/client/package.json
+++ b/Frontend/client/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.18.0",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "react-minimal-pie-chart": "^3.5.0",
     "react-redux": "^6.0.1",
     "react-responsive-carousel": "^3.1.47",
     "react-router": "^4.3.1",
