--- a/Frontend/netlify.toml
+++ b/Frontend/netlify.toml
@@ -6,6 +6,6 @@
 # “publish” is the directory to publish (relative to the root of your repo).
 
 [build]
-  base    = "/labspt2-wedding-website/frontend/client"
+  base    = "/frontend/client"
   command = "yarn run build"
-  publish = "build/public"
+  publish = "/frontend/client/build"
