--- a/Backend/package.json
+++ b/Backend/package.json
@@ -14,6 +14,9 @@
   "license": "MIT",
   "dependencies": {
     "aws-sdk": "^2.412.0",
+    "bcrypt": "^3.0.4",
+    "bookshelf": "^0.13.3",
+    "bookshelf-secure-password": "^3.0.1",
     "cors": "^2.8.5",
     "cross-env": "^5.2.0",
     "dotenv": "^6.2.0",
@@ -22,12 +25,12 @@
     "heroku": "^7.22.4",
     "jest": "^24.1.0",
     "joi": "^14.3.1",
-    "knex": "^0.16.3",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "multer-s3": "^2.9.0",
     "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0",
+    "passport-jwt": "^4.0.0",
     "pg": "^7.8.1",
     "sqlite3": "^4.0.6"
   },
