--- a/Frontend/client/package.json
+++ b/Frontend/client/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "babel-core": "^6.26.3",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "react-native": "^0.59.0",
     "react-redux": "^6.0.1",
     "react-responsive-carousel": "^3.1.47",
     "react-router-dom": "^4.3.1",
