--- a/Backend/package.json
+++ b/Backend/package.json
@@ -18,8 +18,6 @@
   "license": "MIT",
   "dependencies": {
     "aws-sdk": "^2.412.0",
-    "bookshelf": "^0.14.2",
-    "bookshelf-secure-password": "^3.1.0",
     "cors": "^2.8.5",
     "cross-env": "^5.2.0",
     "dotenv": "^6.2.0",
@@ -32,9 +30,12 @@
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "multer-s3": "^2.9.0",
+    "objection": "^1.6.3",
+    "objection-password": "^2.0.0",
     "passport": "^0.4.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth": "^2.0.0",
+    "passport-jwt": "^4.0.0",
     "passport-twitter": "^1.0.4",
     "pg": "^7.8.2",
     "sqlite3": "^4.0.6"
