--- a/Backend/package.json
+++ b/Backend/package.json
@@ -35,6 +35,7 @@
     "passport": "^0.4.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth": "^2.0.0",
+    "passport-json": "^1.2.0",
     "passport-jwt": "^4.0.0",
     "passport-twitter": "^1.0.4",
     "pg": "^7.8.2",
