--- a/Backend/package.json
+++ b/Backend/package.json
@@ -26,6 +26,7 @@
     "heroku": "^7.22.4",
     "jest": "^24.1.0",
     "joi": "^14.3.1",
+    "jsonwebtoken": "^8.5.0",
     "knex": "^0.16.3",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
