beAWSbucket: setting up boiler plate.

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -17,7 +17,9 @@
   },
   "license": "MIT",
   "dependencies": {
+    "aws": "^0.0.3-2",
     "aws-sdk": "^2.412.0",
+    "busboy": "^0.3.0",
     "cors": "^2.8.5",
     "cross-env": "^5.2.0",
     "dotenv": "^6.2.0",
