--- a/Backend/package.json
+++ b/Backend/package.json
@@ -38,8 +38,9 @@
     "passport-google-oauth": "^2.0.0",
     "passport-json": "^1.2.0",
     "passport-jwt": "^4.0.0",
-    "passport-twitter": "^1.0.4",
+    "passport-twitter-token": "^1.3.0",
     "pg": "^7.8.2",
+    "request": "^2.88.0",
     "sqlite3": "^4.0.6"
   },
   "devDependencies": {
