--- a/Backend/package.json
+++ b/Backend/package.json
@@ -2,8 +2,8 @@
   "name": "JoinOurBigDay-Backend",
   "version": "1.0.0",
   "engines": {
-    "node": "11.11.0",
-    "yarn": "1.13.0"
+    "node": "^11.11.0",
+    "yarn": "^1.13.0"
   },
   "main": "index.js",
   "scripts": {
