--- a/Frontend/client/package.json
+++ b/Frontend/client/package.json
@@ -11,6 +11,7 @@
     "react-responsive-carousel": "^3.1.47",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.5",
+    "react-textarea-autosize": "^7.1.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "styled-components": "^4.1.3"
