--- a/Frontend/client/package.json
+++ b/Frontend/client/package.json
@@ -1,6 +1,10 @@
 {
   "name": "client",
   "version": "0.1.0",
+  "engines": {
+    "node": "^11.3.0",
+    "yarn": "^1.13.0"
+  },
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
@@ -10,6 +14,7 @@
     "react-responsive-carousel": "^3.1.47",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
+    "react-stripe-checkout": "^2.6.3",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
   },
