--- a/Frontend/client/package.json
+++ b/Frontend/client/package.json
@@ -4,13 +4,16 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "query-string": "^6.4.0",
     "react": "^16.8.3",
+    "react-button-component": "^1.0.0",
     "react-dom": "^16.8.3",
     "react-redux": "^6.0.1",
     "react-responsive-carousel": "^3.1.47",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.5",
     "redux": "^4.0.1",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "styled-components": "^4.1.3"
   },
