--- a/Frontend/client/package.json
+++ b/Frontend/client/package.json
@@ -15,6 +15,8 @@
     "react-scripts": "^2.1.5",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^5.10.0",
+    "redux-persist-transform-encrypt": "^2.0.1",
     "redux-thunk": "^2.3.0",
     "styled-components": "^4.1.3"
   },
@@ -35,7 +37,9 @@
   ],
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
-  "devDependencies": {},
+  "devDependencies": {
+    "redux-devtools-extension": "^2.13.8"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC"
