--- a/Frontend/client/package.json
+++ b/Frontend/client/package.json
@@ -5,14 +5,17 @@
   "dependencies": {
     "axios": "^0.18.0",
     "react": "^16.8.3",
+    "react-button-component": "^1.0.0",
+    "react-datepicker": "^2.3.0",
     "react-dom": "^16.8.3",
+    "react-icons": "^3.5.0",
     "react-redux": "^6.0.1",
     "react-responsive-carousel": "^3.1.47",
-    "react-router-dom": "^4.3.1",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "^2.1.5",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^4.1.3"
+    "styled-components": "^4.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
