fsRedux: user set up partially done but it is connected and it adds a username, wedding party and venue location for venue location I plan to use react-google-places-suggest still need to send the sign up users to the page

--- a/Frontend/client/package.json
+++ b/Frontend/client/package.json
@@ -7,16 +7,18 @@
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "axios": "^0.18.0",
-    "jwt-decode": "^2.2.0",
-    "query-string": "^6.4.0",
     "babel-core": "^6.26.3",
     "fontawesome": "^5.6.3",
+    "jwt-decode": "^2.2.0",
+    "query-string": "^6.4.0",
     "react": "^16.8.3",
     "react-button-component": "^1.0.0",
     "react-datepicker": "^2.2.0",
     "react-datetime": "^2.16.3",
     "react-day-picker": "^7.3.0",
     "react-dom": "^16.8.3",
+    "react-google-maps-loader": "^4.2.5",
+    "react-google-places-suggest": "^3.6.1",
     "react-icons": "^3.5.0",
     "react-minimal-pie-chart": "^3.5.0",
     "react-redux": "^6.0.1",
@@ -24,11 +26,11 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.5",
+    "react-textarea-autosize": "^7.1.0",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-persist": "^5.10.0",
     "redux-persist-transform-encrypt": "^2.0.1",
-    "react-textarea-autosize": "^7.1.0",
     "redux-thunk": "^2.3.0",
     "styled-components": "^4.1.3"
   },
