--- a/Frontend/client/package.json
+++ b/Frontend/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "prop-types": "^15.7.2",
     "react": "^16.8.3",
     "react-button-component": "^1.0.0",
     "react-datepicker": "^2.3.0",
