--- a/Frontend/client/package.json
+++ b/Frontend/client/package.json
@@ -10,6 +10,7 @@
     "babel-core": "^6.26.3",
     "fontawesome": "^5.6.3",
     "jwt-decode": "^2.2.0",
+    "moment": "^2.24.0",
     "query-string": "^6.4.0",
     "react": "^16.8.3",
     "react-button-component": "^1.0.0",
