--- a/Frontend/client/package.json
+++ b/Frontend/client/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "axios": "^0.18.0",
     "babel-core": "^6.26.3",
+    "dotenv": "^7.0.0",
     "fontawesome": "^5.6.3",
     "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
