--- a/Frontend/client/package.json
+++ b/Frontend/client/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.16",
+    "@fortawesome/fontawesome-svg-core": "^1.2.17",
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "axios": "^0.18.0",
@@ -16,11 +16,12 @@
     "react-dom": "^16.8.3",
     "react-icons": "^3.5.0",
     "react-minimal-pie-chart": "^3.5.0",
-    "react-pie-chart": "^0.0.3",
+    "react-pie-chart": "0.0.3",
     "react-redux": "^6.0.1",
     "react-responsive-carousel": "^3.1.47",
     "react-router-dom": "^5.0.0",
     "react-scripts": "^2.1.5",
+    "react-table": "^6.9.2",
     "react-textarea-autosize": "^7.1.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
