--- a/Backend/package.json
+++ b/Backend/package.json
@@ -22,6 +22,7 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "cross-env": "^5.2.0",
+    "crypto-random-string": "^2.0.0",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "helmet": "^3.15.1",
@@ -43,6 +44,7 @@
     "passport-twitter-token": "^1.3.0",
     "pg": "^7.8.2",
     "request": "^2.88.0",
+    "sendgrid": "^5.2.3",
     "sqlite3": "^4.0.6",
     "stripe": "^6.28.0"
   },
