--- a/Frontend/client/package.json
+++ b/Frontend/client/package.json
@@ -15,6 +15,7 @@
     "moment": "^2.24.0",
     "query-string": "^6.4.0",
     "react": "^16.8.3",
+    "react-bootstrap": "^1.0.0-beta.8",
     "react-button-component": "^1.0.0",
     "react-datepicker": "^2.2.0",
     "react-datetime": "^2.16.3",
