feWeddingPhotos: added some style to the login.

--- a/Frontend/client/package.json
+++ b/Frontend/client/package.json
@@ -21,6 +21,7 @@
     "react-datetime": "^2.16.3",
     "react-day-picker": "^7.3.0",
     "react-dom": "^16.8.3",
+    "react-google-button": "^0.5.3",
     "react-google-maps-loader": "^4.2.5",
     "react-google-places-suggest": "^3.7.1",
     "react-icons": "^3.5.0",
@@ -30,6 +31,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.5",
+    "react-social-login-buttons": "^2.3.1",
     "react-stripe-checkout": "^2.6.3",
     "react-textarea-autosize": "^7.1.0",
     "reactstrap": "^8.0.0",
