--- a/Backend/package.json
+++ b/Backend/package.json
@@ -29,10 +29,11 @@
     "jest": "^24.1.0",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.0",
-    "knex": "^0.16.3",
+    "knex": "^0.16.5",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "multer-s3": "^2.9.0",
+    "node": "^11.14.0",
     "objection": "^1.6.3",
     "objection-password": "^2.0.0",
     "passport": "^0.4.0",
