--- a/Frontend/client/package.json
+++ b/Frontend/client/package.json
@@ -21,6 +21,7 @@
     "react-animate-on-scroll": "^2.1.5",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-button-component": "^1.0.0",
+    "react-custom-scrollbars": "^4.2.1",
     "react-datepicker": "^2.2.0",
     "react-datetime": "^2.16.3",
     "react-day-picker": "^7.3.0",
