--- a/Backend/package.json
+++ b/Backend/package.json
@@ -44,6 +44,7 @@
     "passport-twitter-token": "^1.3.0",
     "pg": "^7.8.2",
     "request": "^2.88.0",
+    "sendgrid": "^5.2.3",
     "sqlite3": "^4.0.6",
     "stripe": "^6.28.0"
   },
