--- a/Frontend/client/package.json
+++ b/Frontend/client/package.json
@@ -26,6 +26,7 @@
     "react-datetime": "^2.16.3",
     "react-day-picker": "^7.3.0",
     "react-dom": "^16.8.3",
+    "react-fontawesome": "^1.6.1",
     "react-google-button": "^0.5.3",
     "react-google-maps-loader": "^4.2.5",
     "react-google-places-suggest": "^3.7.1",
