--- a/Frontend/client/package.json
+++ b/Frontend/client/package.json
@@ -10,6 +10,7 @@
     "babel-core": "^6.26.3",
     "bootstrap": "^4.3.1",
     "create-react-class": "^15.6.3",
+    "date-fns": "^1.30.1",
     "dotenv": "^7.0.0",
     "fontawesome": "^5.6.3",
     "jwt-decode": "^2.2.0",
